--- a/_posts/2025-05-04-betrieb.md
+++ b/_posts/2025-05-04-betrieb.md
@@ -10,19 +10,17 @@ title:  "Betrieb"
 
 (Philipp Frank, _Einstein: His Life and Times_)
 
-Like many people I started my career with a surplus of time and energy and poor judgment about how to spend them. I put considerable effort into solving problems that weren't worth it. With age and experience I've learned to be more conscientious about what I focus on. I ask questions like
+Like many people I started my career with a surplus of time and energy and poor judgment about how to spend them. I put considerable effort into solving problems that weren't worth it. With age and experience I've learned to be more conscientious about what I focus on. I ask questions like:
 
 **Why does the problem exist?** I try to avoid [pseudo-work](https://en.wikipedia.org/wiki/Bullshit_job), [bikeshedding](https://en.wikipedia.org/wiki/Law_of_triviality), and other problems that arise from organizational dysfunction rather than client/customer/user needs.
 
-**Who would benefit from a new solution?** It's tempting to extrapolate from your own experience, but don't assume other people share your perspective and priorities.
+**Are the requirements for a [minimum viable solution](https://en.wikipedia.org/wiki/Minimum_viable_product) clear and validated?** Beware of [scope creep](https://en.wikipedia.org/wiki/Scope_creep) and unvalidated requirements.  It's tempting to extrapolate from your own experience and assume other people share your perspectives and priorities. People can usually give you a reliable enough account what they've done in the past and what they don't like about existing solutions to some problem. People rarely have precise ideas about what they do want. The few who have specific, positive ideas often struggle to articulate them. And you still have to a validate that people actually want what they say they want. This is the essence of [user research](https://en.wikipedia.org/wiki/User_Research).
 
-**Are the requirements for a [minimum viable solution](https://en.wikipedia.org/wiki/Minimum_viable_product) clear? And validated?** Beware of [scope creep](https://en.wikipedia.org/wiki/Scope_creep) and unvalidated requirements. People can usually give you a reliable enough account what they've done in the past and what they don't like about existing solutions to some problem. People rarely have precise ideas about what they do want. The few who have specific, positive ideas often struggle to articulate them. And you still have to a validate that people actually want what they say they want. This is the essence of [user research](https://en.wikipedia.org/wiki/User_Research).
+**Are the constraints on a solution essential?** You can waste a lot of time and energy -- days, months, even years or decades -- on constraints that aren't [essential](https://en.wikipedia.org/wiki/Essential_complexity) to the problem, like poor tool choices.
 
-**Are the constraints on a solution essential?** You can waste a lot of time and energy on constraints that aren't [essential](https://en.wikipedia.org/wiki/Essential_complexity) to the problem, like poor tool choices.
+**Can someone with less knowledge/skill/talent than me solve this problem?** I strongly prefer to focus on problems that strike a balance between ["the challenge of the task and the skill of the performer"]({% post_url 2021-02-14-optimal-experience %}).
 
-**Can someone with less knowledge/skill/talent than me solve this problem?** I prefer to focus on problems that strike a balance between ["the challenge of the task and the skill of the performer"]({% post_url 2021-02-14-optimal-experience %}).
-
-**Will someone else solve the problem if I don't?** There are many situations where you care more about the result than about the process of reaching it.
+**Will someone else solve the problem soon enough if I don't?**. There are many problems worth solving that simply aren't extrinsically rewarding enough to entice people into working on them. I often gravitate toward these problems in my (unpaid) personal projects.
 
 **Can I solve this problem significantly better than other people have solved it?** Many existing solutions can be improved upon with the benefit of hindsight. You can often eliminate some of the mistakes, warts, and compromises that inevitably accumulate when a solution evolves incrementally. The important question is: how much improvement can you make? People will complain about the status quo but only dramatic improvements are likely to induce people to switch from a mature solution. Anything less than dramatic improvement is rarely worth the effort.
 
