--- a/_posts/2025-05-04-betrieb.md
+++ b/_posts/2025-05-04-betrieb.md
@@ -20,7 +20,7 @@ Like many people I started my career with a surplus of time and energy and poor 
 
 **Can someone with less knowledge/skill/talent than me solve this problem?** I strongly prefer to focus on problems that strike a balance between ["the challenge of the task and the skill of the performer"]({% post_url 2021-02-14-optimal-experience %}).
 
-**Will someone else solve the problem soon enough if I don't?**. There are many problems worth solving that simply aren't extrinsically rewarding enough to entice people into working on them. I often gravitate toward these problems in my (unpaid) [personal projects]({% post_url 2020-05-23-personal-projects }).
+**Will someone else solve the problem soon enough if I don't?**. There are many problems worth solving that simply aren't extrinsically rewarding enough to entice people into working on them. I often gravitate toward these problems in my (unpaid) [personal projects]({% post_url 2020-05-23-personal-projects %}).
 
 **Can I solve this problem significantly better than other people have solved it?** Many existing solutions can be improved upon with the benefit of hindsight. You can often eliminate some of the mistakes, warts, and compromises that inevitably accumulate when a solution evolves incrementally. The important question is: how much improvement can you make? People will complain about the status quo but only dramatic improvements are likely to induce people to switch from a mature solution. Anything less than dramatic improvement is rarely worth the effort.
 
