update Betrieb post

--- a/_posts/2025-05-04-betrieb.md
+++ b/_posts/2025-05-04-betrieb.md
@@ -26,4 +26,6 @@ Like many people I started my career with a surplus of time and energy and poor 
 
 If there are no existing solutions to the problem, ask yourself why. [Blue oceans](https://en.wikipedia.org/wiki/Blue_Ocean_Strategy) do exist, but they are rare. More often a dearth of solutions is a hint that a problem is not worth solving.
 
+**What is the near-term outlook?** It's tempting to squint at a project and imagine vast potential. You may also have a tendency to discount present realities in favor of future possibilities. Intrinsic motivation and a vision of the future can sustain you through slogging and tedium in the near-term, but not indefinitely.  At some point you'll need extrinsic rewards to keep going. I ask myself: what is the work likely to be three months from now? Six months? One year? If the answer is "slogging and more slogging", as it often is, I look for alternatives.
+
 **Are there other problems I should prioritize over this problem?** Considering [opportunity cost](https://en.wikipedia.org/wiki/Opportunity_cost), [urgency vs. importance](https://en.wikipedia.org/wiki/Time_management#Eisenhower_method), Return on Investment (ROI), and other criteria.
