--- a/_posts/2025-09-13-hc50b.md
+++ b/_posts/2025-09-13-hc50b.md
@@ -6,7 +6,7 @@ layout: post
 title:  "The History of Computing in 50 Books"
 ---
 
-This afternoon I gave a talk at the [Brunswick Community Library](https://www.brunswicklibrary.org) on "The History of Computing in 50 Books". The history of computing is one of my favorite subjects, and I've been reading about it almost as long as I've been using computers, over three decades now. Putting together the talk was a lot of fun. It was also a great excuse to scour the [UHLS](https://www.uhls.org) catalog for books I didn't know about. I found and read some great ones, like [Core Memory: A Visual Survey of Vintage Computers from the Computer History Museum](https://catalog.uhls.org/iii/encore/record/C__Rb1318472__Score%20memory__Orightresult__U__X7?lang=eng&suite=gold) and [Valley of Genius: The Uncensored History of Silicon Valley (As Told by the Hackers, Founders, and Freaks Who Made It Boom](https://catalog.uhls.org/iii/encore/record/C__Rb1736134__Svalley%20of%20genius__Orightresult__U__X7?lang=eng&suite=gold). Most of the books in my list were popular histories, with a smattering of novels (like Neal Stephenson's Baroque cycle) and even one children's book ([Margaret and the Moon](https://catalog.uhls.org/iii/encore/record/C__Rb1695880__Smargaret%20and%20the%20moon__Orightresult__U__X7?lang=eng&suite=gold) by Dean Robbins and Lucy Knisley).
+This afternoon I gave a talk ([slides](/projects/hc50b.pdf)) at the [Brunswick Community Library](https://www.brunswicklibrary.org) on "The History of Computing in 50 Books". The history of computing is one of my favorite subjects, and I've been reading about it almost as long as I've been using computers, over three decades now. Putting together the talk was a lot of fun. It was also a great excuse to scour the [UHLS](https://www.uhls.org) catalog for books I didn't know about. I found and read some great ones, like [Core Memory: A Visual Survey of Vintage Computers from the Computer History Museum](https://catalog.uhls.org/iii/encore/record/C__Rb1318472__Score%20memory__Orightresult__U__X7?lang=eng&suite=gold) and [Valley of Genius: The Uncensored History of Silicon Valley (As Told by the Hackers, Founders, and Freaks Who Made It Boom](https://catalog.uhls.org/iii/encore/record/C__Rb1736134__Svalley%20of%20genius__Orightresult__U__X7?lang=eng&suite=gold). Most of the books in my list were popular histories, with a smattering of novels (like Neal Stephenson's Baroque cycle) and even one children's book ([Margaret and the Moon](https://catalog.uhls.org/iii/encore/record/C__Rb1695880__Smargaret%20and%20the%20moon__Orightresult__U__X7?lang=eng&suite=gold) by Dean Robbins and Lucy Knisley).
 
 The complete list:
 
