--- a/_posts/2025-09-13-hc50b.md
+++ b/_posts/2025-09-13-hc50b.md
@@ -30,8 +30,8 @@ The complete list:
 | Neal Stephenson | [_Cryptonomicon_](https://catalog.uhls.org/iii/encore/record/C__Rb1130867__Scryptonomicon__Orightresult__U__X7?lang=eng&suite=gold) |
 | David Kahn | _The Codebreakers – The Story of Secret Writing_ |
 | John Alderman | [_Core Memory: A Visual Survey of Vintage Computers_](https://catalog.uhls.org/iii/encore/record/C__Rb1318472__Score%20memory__Orightresult__U__X7?lang=eng&suite=gold) |
-| Martin Campbell-Kelly, William Aspray, Nathan Ensmenger, Jeffrey R. Yost | [_Martin Campbell-Kelly, William Aspray, Nathan Ensmenger, Jeffrey R. Yost_](https://catalog.uhls.org/iii/encore/record/C__Rb1663680__Scampbell-kelly%20computer__Orightresult__U__X2?lang=eng&suite=gold) |
-| William Aspray | _William Aspray_ |
+| Martin Campbell-Kelly, William Aspray, Nathan Ensmenger, Jeffrey R. Yost | [_Computer : a History of the Information Machine_](https://catalog.uhls.org/iii/encore/record/C__Rb1663680__Scampbell-kelly%20computer__Orightresult__U__X2?lang=eng&suite=gold) |
+| William Aspray | _John von Neumann and the Origins of Modern Computing_ |
 | George Dyson | [_Turing's Cathedral: The Origins of the Digital Universe_](https://catalog.uhls.org/iii/encore/record/C__Rb1475581__Sturing%27s%20cathedral__Orightresult__U__X7?lang=eng&suite=gold) |
 | Joel Shurkin | _Broken Genius: The Rise and Fall of William Shockley, Creator of the Electronic Age_ |
 | Charles Petzold | [_Code: The Hidden Language of Computer Hardware and Software_](https://catalog.uhls.org/iii/encore/record/C__Rb1959777__Spetzold%20code__Orightresult__U__X2?lang=eng&suite=gold) |
